Stylized calculator, fixed overflow problem

--- a/myStyle.css
+++ b/myStyle.css
@@ -2,22 +2,92 @@ body {
     display: flex;
     justify-content: center;
     margin: 0;
+    font-family: 'Trebuchet MS', 'Avantgarde', sans-serif;
 }
 
 #container {
     display: flex;
     flex-direction: column;
     width: 400px;
-    height: 600px;
-    align-items: center;
-    justify-content: center;
+    min-height: 600px;
+    align-items: stretch;
     margin-top: 100px;
+    border: 5px solid gray;
+    border-radius: 20px;
+    background-color: dimgray;
+}
+
+#wholeDisplay {
+    flex: 1;
+    background-color: white;
+    margin: 25px 25px;
+    border-radius: 10px;
+}
+
+#outerDisplay, #innerDisplay {
+    flex: 1;
+    margin: 2px 10px 2px;
+    word-wrap: break-word;
 }
 
 #outerDisplay {
-    height: 35px;
+    text-align: left;
+    min-height: 50px;
+    font-size: 40px;
 }
 
 #innerDisplay {
-    height: 55px;
+    text-align: right;
+    font-size: 50px;
+}
+
+.row {
+    display: flex;
+    gap: 2px;
+    flex: 1;
+    margin: 0px 2px 2px;
+}
+
+button {
+    flex: 1;
+    min-height: 75px;
+    border: 2px solid gray;
+    border-radius: 10px;
+    font-size: 30px;
+    margin: 5px;
+    transition-duration: 0.2s;
+    cursor: pointer;
+}
+
+button:active {
+    transform: translateY(2px);
+}
+
+.number {
+    background-color: silver;
+    color: black;
+}
+
+.number:hover {
+    background-color: beige;
+}
+
+#equals {
+    background-color: orange;
+}
+
+#clear {
+    background-color: crimson;
+}
+
+#clear:hover {
+    background-color: tomato;
+}
+
+#delete {
+    background-color: aqua;
+}
+
+#delete:hover {
+    background-color: lightseagreen;
 }
